--- a/pipelines.yml
+++ b/pipelines.yml
@@ -105,9 +105,9 @@ pipelines:
             - curl -o aws-iam-authenticator https://amazon-eks.s3.us-west-2.amazonaws.com/1.19.6/2021-01-05/bin/linux/amd64/aws-iam-authenticator
             - chmod +x ./aws-iam-authenticator
             - mkdir -p $HOME/bin && cp ./aws-iam-authenticator $HOME/bin/aws-iam-authenticator && export PATH=$PATH:$HOME/bin
-            - sed "s|imageName|{{ .Values.app.dockerImageName }}:${run_number}|g" workshop-app/deployment.yml > my-deployment.yaml
-            - cat my-deployment.yaml
-            - kubectl apply -f my-deployment.yaml --namespace  okta-workshop
+            - sed "s|imageName|{{ .Values.app.dockerImageName }}:${run_number}|g" deployment.yml > my-deployment.yml
+            - cat my-deployment.yml
+            - kubectl apply -f my-deployment.yml --namespace  okta-workshop
             - while [ -z "$url" ]; do url=$(kubectl describe service workshop-app --namespace  okta-workshop | grep 'LoadBalancer Ingress:' | awk '{printf "https://%s",$3;}'); sleep 2; done
             - echo "$url"
             - echo "Workshop App launched!"
