--- a/deployment.yml
+++ b/deployment.yml
@@ -14,6 +14,17 @@ spec:
       containers:
         - name:  workshop-app
           image: imageName # IMPORTANT: Update!
+          env:
+            - name: SERVICE_ENDPOINT
+              value: 8086
+            - name: HEALTH_CHECK_ENDPOINT
+              value: 8096
+            - name: AUD
+              value: "api.acme.com/test"
+            - name: CID
+              value: "0oa1emw7xmqeh4Spd5d7"
+            - name: DOMAIN
+              value: "dev-73225252.okta.com"
           imagePullPolicy: Always
           ports:
             - containerPort: 8096
