--- a/pipelines.yml
+++ b/pipelines.yml
@@ -87,12 +87,13 @@ pipelines:
         execution:
           onSuccess:
             - echo "Congrats the Docker image was promoted!"
-      - name: eks_deploy
+      - name: deploy_test
         type: Bash
         configuration:
           integrations:
             - name: {{ .Values.AWS.intName }}
             - name: {{ .Values.AWS.eks }}
+            - name: okta_envs
           inputResources:
             - name: codeRepo
           inputSteps:
@@ -111,6 +112,9 @@ pipelines:
             - kubectl apply -f my-deployment.yml --namespace  okta-workshop
             - while [ -z "$url" ]; do url=$(kubectl describe service workshop-app --namespace  okta-workshop | grep 'LoadBalancer Ingress:' | awk '{printf "https://%s",$3;}'); sleep 2; done
             - echo "$url"
-            - echo "Workshop App launched!"
+            - echo "Testing api access...."
+            - auth_api_call.sh -o $int_okta_envs_org_server -s $int_okta_envs_auth_server -c $int_okta_envs_cid -u $int_okta_envs_user -p $int_okta_envs_password -r "http://localhost:8080/authorization-code/callback" "$url/api/v1/users"
           onSuccess:
-            - echo "Congrats the Docker image was deployed!"
+            - echo "Congrats the Docker image was deployed and tested succesfully!"
+          onFailure:
+            - echo "uh oh, something went wrong"
